# Frostbyte

./: .editorconfig  .gitignore  CHANGELOG.md  INSTALL.md  README.md  lint.sh  mypy.ini  pyproject.toml  requirements.txt  setup-pre-commit.sh  setup.py  test_click_progress.py  test_progress.py
.github/workflows/: lint-test.yml
docs/: index.md  linting.md  versioning-workflow.md
examples/: README.md  debug_diff.py  debug_to_file.py  debug_with_traceback.py  diff_demo.py  diff_functionality.ipynb  diff_with_keys.py  frostbyte_diff_roadmap.py  run_diff_test.py  sample_pipeline.py  simple_diff_test.py  test_diff_direct.py
frostbyte/: __init__.py  __main__.py  cli.py
frostbyte/cli/: __init__.py  commands.py
frostbyte/core/: __init__.py  compressor.py  diff.py  manager.py  store.py  validation.py
frostbyte/utils/: __init__.py  common.py  config.py  diff.py  file_utils.py  json_utils.py  schema.py
tests/: __init__.py  conftest.py  test_cli.py  test_compressor.py  test_diff.py  test_manager.py  test_progress.py  test_progress_bar.py  test_store.py  test_utils.py
